--- a/suxia-toshow-webapp/src/main/resources/application.yml
+++ b/suxia-toshow-webapp/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 ###################################################
 #
-# Spring基础配置
+# Spring基础配置 cczhaoyc@163.com
 #
 ###################################################
 server:
